objects/Workshop_Attendee__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Training</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields><fields>
        <fullName>Training_Hours__c</fullName>
        <description>Updated with Training Event Hours</description>
        <label>Training Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Workshop_Date_TIme__c</fullName>
        <formula>Workshop__r.Start_Time__c</formula>
        <label>Workshop Date/TIme</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Workshop_Hours__c</fullName>
        <formula>IF ( TEXT(Workshop__r.Type__c) = "Training", Workshop__r.Duration_in_Hours__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration in hours</inlineHelpText>
        <label>Workshop Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Workshop_Term__c</fullName>
        <formula>Workshop__r.Term__r.Name</formula>
        <label>Workshop Term</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Workshop_Type__c</fullName>
        <formula>TEXT (Workshop__r.Type__c)</formula>
        <label>Workshop Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Workshop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workshop</label>
        <referenceTo>Workshop__c</referenceTo>
        <relationshipLabel>Workshop Attendees</relationshipLabel>
        <relationshipName>Training</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Workshop Attendee</label><nameField>
        <displayFormat>LWC-{000000}</displayFormat>
        <label>Workshop Attendee Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Workshop Attendees</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>